# AI-PoC-Planner

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT_LOG.md  README.md  deep-research-report.md  pyproject.toml
.github/workflows/: ci.yml
docs/research/: AI_ADOPTION_CASE_REVIEW.md
docs/spec/: PLAN.md  SPEC.md  TASKS.md
src/ai_poc_planner/: __init__.py  __main__.py  catalog.py  config.py
src/ai_poc_planner/agent/: __init__.py  contracts.py  demo.py  planning.py
tests/: test_cli_demo.py  test_config.py  test_domain_models.py  test_fake_provider.py  test_smoke.py
tests/agent/: test_planning_agent.py
tests/api/: test_demo_server.py  test_discovery_interview_api.py  test_persisted_planning_api.py  test_planning_api.py  test_project_history_api.py  test_provider_connection_api.py
tests/application/: test_catalog_matching.py  test_deployment_posture.py  test_offline_workflow.py  test_project_history_service.py  test_proposal_report.py  test_tool_services.py
tests/domain/: test_assessment_engine.py  test_discovery_contracts.py  test_hard_gates.py  test_opportunity_catalog.py  test_project_history_contracts.py  test_schemas.py  test_scoring.py
tests/integration/: test_planning_run_lifecycle.py  test_project_lifecycle.py
tests/persistence/: test_model_profile_repository.py  test_project_history_repository.py
tests/providers/: __init__.py  test_fake_provider.py  test_llama_cpp_discovery_integration.py  test_llama_cpp_integration.py  test_model_profile_contracts.py  test_openai_compatible_adapter.py
tests/ui/: test_api_client.py  test_streamlit_app.py
(+49 files in other folders)
