[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-poc-planner"
version = "0.1.0"
description = "Local-first AI proof-of-concept planning assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "AI PoC Planner contributors" }]
dependencies = [
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
